# caninana

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/_static/: repo_info.json  repo_sizes.txt
src/caninana/: __init__.py
src/lontras/: __init__.py  lontras.py
tests/: assertions.py  test_caninana_series.py  test_lontras_array.py  test_lontras_dataframe.py  test_lontras_index.py  test_lontras_series.py  test_lontras_types.py
